05-services/clustrIP-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appzeke2
spec:
  clusterIP: 10.99.10.99
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: appzeke
