05-services/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appzeke-headless
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: appzeke
