05-services/loadbalancer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appzeke-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: appzeke
