05-services/nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appzeke-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: appzeke
