05-services/publish-not-ready-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appzeke-all
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: appzeke
  publishNotReadyEndpoints: true
