05-services/session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: appzeke
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: appzeke
