05-services/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: appzeke
spec:
  tls:
  - hosts: 
    - appzeke.example.com
    secretName: tls-secret
  rules:
  - host: appzeke.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: appzeke-nodeport
          servicePort: 80
