05-services/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: appzeke
spec:
  rules:
  - host: appzeke.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: appzeke-nodeport
          servicePort: 80
